--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -10,4 +10,12 @@
     <ProjectReference Include="..\Domain\Dominio.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
